--- a/archives/toutiao-search/2024-03-20.md
+++ b/archives/toutiao-search/2024-03-20.md
@@ -1,59 +1,80 @@
 # 2024-03-20
 
-共 122 条
+共 143 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Mar 20 2024 08:25:02 GMT+0800 (China Standard Time) -->
-1. [王树国的第四次工业革命与大学改革](https://so.toutiao.com/search?keyword=王树国的第四次工业革命与大学改革)
+<!-- 最后更新时间 Wed Mar 20 2024 09:37:35 GMT+0800 (China Standard Time) -->
+1. [山西一高速发生交通事故13人死亡](https://so.toutiao.com/search?keyword=山西一高速发生交通事故13人死亡)
 1. [19岁小伙救人溺亡 获救者下跪致谢](https://so.toutiao.com/search?keyword=19岁小伙救人溺亡+获救者下跪致谢)
 1. [感受中国经济“春意浓”](https://so.toutiao.com/search?keyword=感受中国经济“春意浓”)
-1. [王树国3次鞠躬告别西交大师生](https://so.toutiao.com/search?keyword=王树国3次鞠躬告别西交大师生)
+1. [王树国的第四次工业革命与大学改革](https://so.toutiao.com/search?keyword=王树国的第四次工业革命与大学改革)
 1. [半个月大宝宝睡醒后自己玩不哭不闹](https://so.toutiao.com/search?keyword=半个月大宝宝睡醒后自己玩不哭不闹)
-1. [恒大被罚41.75亿到底怎么缴](https://so.toutiao.com/search?keyword=恒大被罚41.75亿到底怎么缴)
-1. [张立群任西安交通大学校长](https://so.toutiao.com/search?keyword=张立群任西安交通大学校长)
-1. [19岁小伙救下5人后溺亡 多方发声](https://so.toutiao.com/search?keyword=19岁小伙救下5人后溺亡+多方发声)
-1. [印媒称印军对华展示谁是印度洋老大](https://so.toutiao.com/search?keyword=印媒称印军对华展示谁是印度洋老大)
-1. [直击鹊桥二号发射现场](https://so.toutiao.com/search?keyword=直击鹊桥二号发射现场)
+1. [网友称埃尔法低配在日本不到20万](https://so.toutiao.com/search?keyword=网友称埃尔法低配在日本不到20万)
+1. [歼20紧急升空逼退外机](https://so.toutiao.com/search?keyword=歼20紧急升空逼退外机)
+1. [小区电动车禁入 门口被堵成停车场](https://so.toutiao.com/search?keyword=小区电动车禁入+门口被堵成停车场)
+1. [王树国3次鞠躬告别西交大师生](https://so.toutiao.com/search?keyword=王树国3次鞠躬告别西交大师生)
+1. [男子给前妻转账 现任妻子起诉要回](https://so.toutiao.com/search?keyword=男子给前妻转账+现任妻子起诉要回)
 1. [何赛飞追着代拍打](https://so.toutiao.com/search?keyword=何赛飞追着代拍打)
-1. [槽头肉企业被曝光前生意红火](https://so.toutiao.com/search?keyword=槽头肉企业被曝光前生意红火)
+1. [重庆警方辟谣网传男子杀人焚尸](https://so.toutiao.com/search?keyword=重庆警方辟谣网传男子杀人焚尸)
 1. [“重庆一商业楼火灾伤亡惨重”不实](https://so.toutiao.com/search?keyword=“重庆一商业楼火灾伤亡惨重”不实)
-1. [护栏坍塌学生坠落 教学楼刚建成2年](https://so.toutiao.com/search?keyword=护栏坍塌学生坠落+教学楼刚建成2年)
-1. [男子持台球杆殴打2名女店员被抓](https://so.toutiao.com/search?keyword=男子持台球杆殴打2名女店员被抓)
-1. [许家印被限制高消费](https://so.toutiao.com/search?keyword=许家印被限制高消费)
-1. [西宁通报小学生楼道打闹撞断护栏](https://so.toutiao.com/search?keyword=西宁通报小学生楼道打闹撞断护栏)
-1. [马克龙为何对俄从“鸽”转“鹰”](https://so.toutiao.com/search?keyword=马克龙为何对俄从“鸽”转“鹰”)
+1. [平台方回应上门按摩APP涉黄](https://so.toutiao.com/search?keyword=平台方回应上门按摩APP涉黄)
+1. [女版“赵子龙”持剑守护牡丹花](https://so.toutiao.com/search?keyword=女版“赵子龙”持剑守护牡丹花)
+1. [俄方确认海军总司令已被撤换](https://so.toutiao.com/search?keyword=俄方确认海军总司令已被撤换)
+1. [张立群任西安交通大学校长](https://so.toutiao.com/search?keyword=张立群任西安交通大学校长)
+1. [恒大被罚41.75亿到底怎么缴](https://so.toutiao.com/search?keyword=恒大被罚41.75亿到底怎么缴)
+1. [19岁小伙救下5人后溺亡 多方发声](https://so.toutiao.com/search?keyword=19岁小伙救下5人后溺亡+多方发声)
+1. [红旗EH7能担起重任吗](https://so.toutiao.com/search?keyword=红旗EH7能担起重任吗)
+1. [槽头肉企业被曝光前生意红火](https://so.toutiao.com/search?keyword=槽头肉企业被曝光前生意红火)
 1. [五问恒大被罚：烂尾楼损失如何挽回](https://so.toutiao.com/search?keyword=五问恒大被罚：烂尾楼损失如何挽回)
-1. [媒体：关注人工智能AIETF](https://so.toutiao.com/search?keyword=媒体：关注人工智能AIETF)
-1. [315晚会后胖东来又人满为患了](https://so.toutiao.com/search?keyword=315晚会后胖东来又人满为患了)
-1. [男子被流浪猫绊倒 投喂者赔24万](https://so.toutiao.com/search?keyword=男子被流浪猫绊倒+投喂者赔24万)
-1. [比亚迪将采用英伟达汽车芯片](https://so.toutiao.com/search?keyword=比亚迪将采用英伟达汽车芯片)
-1. [北大回应考生与前校长蔡元培同名](https://so.toutiao.com/search?keyword=北大回应考生与前校长蔡元培同名)
+1. [男子深夜赶到眉山悼念救人溺亡男生](https://so.toutiao.com/search?keyword=男子深夜赶到眉山悼念救人溺亡男生)
+1. [男子持台球杆殴打2名女店员被抓](https://so.toutiao.com/search?keyword=男子持台球杆殴打2名女店员被抓)
+1. [少年疑卖血身亡 涉事企业停业整顿](https://so.toutiao.com/search?keyword=少年疑卖血身亡+涉事企业停业整顿)
+1. [美媒梳理拜登如何卷入加沙冲突](https://so.toutiao.com/search?keyword=美媒梳理拜登如何卷入加沙冲突)
 1. [中国有208万户千万资产家庭](https://so.toutiao.com/search?keyword=中国有208万户千万资产家庭)
+1. [黄仁勋十年前蹭雷军场子全程中文](https://so.toutiao.com/search?keyword=黄仁勋十年前蹭雷军场子全程中文)
+1. [护栏坍塌学生坠落 教学楼刚建成2年](https://so.toutiao.com/search?keyword=护栏坍塌学生坠落+教学楼刚建成2年)
+1. [英伟达开启通用人形机器人项目](https://so.toutiao.com/search?keyword=英伟达开启通用人形机器人项目)
+1. [许家印被限制高消费](https://so.toutiao.com/search?keyword=许家印被限制高消费)
+1. [315晚会后胖东来又人满为患了](https://so.toutiao.com/search?keyword=315晚会后胖东来又人满为患了)
+1. [印媒称印军对华展示谁是印度洋老大](https://so.toutiao.com/search?keyword=印媒称印军对华展示谁是印度洋老大)
+1. [今日春分](https://so.toutiao.com/search?keyword=今日春分)
+1. [英伟达CEO换了件皮衣 售价8990美元](https://so.toutiao.com/search?keyword=英伟达CEO换了件皮衣+售价8990美元)
+1. [淀粉肠还有救吗](https://so.toutiao.com/search?keyword=淀粉肠还有救吗)
+1. [西藏招商引资：投资者子女可当地高考](https://so.toutiao.com/search?keyword=西藏招商引资：投资者子女可当地高考)
+1. [马克龙为何对俄从“鸽”转“鹰”](https://so.toutiao.com/search?keyword=马克龙为何对俄从“鸽”转“鹰”)
+1. [北大回应考生与前校长蔡元培同名](https://so.toutiao.com/search?keyword=北大回应考生与前校长蔡元培同名)
+1. [男生打伤同学睾丸称姥爷是县长](https://so.toutiao.com/search?keyword=男生打伤同学睾丸称姥爷是县长)
+1. [男子被流浪猫绊倒 投喂者赔24万](https://so.toutiao.com/search?keyword=男子被流浪猫绊倒+投喂者赔24万)
+1. [胡塞武装为何能造出高超音速导弹](https://so.toutiao.com/search?keyword=胡塞武装为何能造出高超音速导弹)
+1. [最高检：6名厅级干部被决定逮捕](https://so.toutiao.com/search?keyword=最高检：6名厅级干部被决定逮捕)
+1. [中国亿元资产家庭达13.3万户](https://so.toutiao.com/search?keyword=中国亿元资产家庭达13.3万户)
+1. [救人遇难小伙是独子：不是首次救人](https://so.toutiao.com/search?keyword=救人遇难小伙是独子：不是首次救人)
+1. [马斯克开源大模型影响有多大](https://so.toutiao.com/search?keyword=马斯克开源大模型影响有多大)
+1. [燃油车自燃率更高？网友质疑](https://so.toutiao.com/search?keyword=燃油车自燃率更高？网友质疑)
+1. [造谣遇害男孩遭活埋微博账号被处置](https://so.toutiao.com/search?keyword=造谣遇害男孩遭活埋微博账号被处置)
+1. [投资9000万元危房全没拆 21人被追责](https://so.toutiao.com/search?keyword=投资9000万元危房全没拆+21人被追责)
+1. [关于校园欺凌 成年人该知道哪些](https://so.toutiao.com/search?keyword=关于校园欺凌+成年人该知道哪些)
+1. [直击鹊桥二号发射现场](https://so.toutiao.com/search?keyword=直击鹊桥二号发射现场)
+1. [西宁通报小学生楼道打闹撞断护栏](https://so.toutiao.com/search?keyword=西宁通报小学生楼道打闹撞断护栏)
+1. [媒体：关注人工智能AIETF](https://so.toutiao.com/search?keyword=媒体：关注人工智能AIETF)
+1. [比亚迪将采用英伟达汽车芯片](https://so.toutiao.com/search?keyword=比亚迪将采用英伟达汽车芯片)
 1. [倪萍分享减重40斤方法](https://so.toutiao.com/search?keyword=倪萍分享减重40斤方法)
 1. [“消失”的凯特王妃](https://so.toutiao.com/search?keyword=“消失”的凯特王妃)
-1. [救人遇难小伙是独子：不是首次救人](https://so.toutiao.com/search?keyword=救人遇难小伙是独子：不是首次救人)
 1. [英伟达“新核弹”B200发布](https://so.toutiao.com/search?keyword=英伟达“新核弹”B200发布)
 1. [全抖音反网暴意识觉醒了](https://so.toutiao.com/search?keyword=全抖音反网暴意识觉醒了)
 1. [五男子凌晨盗窃高档烟酒被抓](https://so.toutiao.com/search?keyword=五男子凌晨盗窃高档烟酒被抓)
-1. [男生打伤同学睾丸称姥爷是县长](https://so.toutiao.com/search?keyword=男生打伤同学睾丸称姥爷是县长)
 1. [媒体人：李梦就赴美一事亮明了态度](https://so.toutiao.com/search?keyword=媒体人：李梦就赴美一事亮明了态度)
 1. [师傅不系安全绳在21楼窗外打胶](https://so.toutiao.com/search?keyword=师傅不系安全绳在21楼窗外打胶)
-1. [胡塞武装为何能造出高超音速导弹](https://so.toutiao.com/search?keyword=胡塞武装为何能造出高超音速导弹)
-1. [今日春分](https://so.toutiao.com/search?keyword=今日春分)
-1. [造谣遇害男孩遭活埋微博账号被处置](https://so.toutiao.com/search?keyword=造谣遇害男孩遭活埋微博账号被处置)
 1. [卢伟冰：小米手机将坚定推进高端化](https://so.toutiao.com/search?keyword=卢伟冰：小米手机将坚定推进高端化)
 1. [日本经济走出通缩要起飞了吗](https://so.toutiao.com/search?keyword=日本经济走出通缩要起飞了吗)
-1. [中国亿元资产家庭达13.3万户](https://so.toutiao.com/search?keyword=中国亿元资产家庭达13.3万户)
 1. [15岁双胞胎被西安交大少年班录取](https://so.toutiao.com/search?keyword=15岁双胞胎被西安交大少年班录取)
 1. [英伟达官宣世界首款人形机器人模型](https://so.toutiao.com/search?keyword=英伟达官宣世界首款人形机器人模型)
 1. [王楚钦48万奖金个人能分到多少](https://so.toutiao.com/search?keyword=王楚钦48万奖金个人能分到多少)
 1. [德拟对普京不加总统头衔 俄方回应](https://so.toutiao.com/search?keyword=德拟对普京不加总统头衔+俄方回应)
 1. [男子发吸毒视频耍帅被民警一锅端](https://so.toutiao.com/search?keyword=男子发吸毒视频耍帅被民警一锅端)
-1. [最高检：6名厅级干部被决定逮捕](https://so.toutiao.com/search?keyword=最高检：6名厅级干部被决定逮捕)
 1. [教育部公布24种新增本科专业](https://so.toutiao.com/search?keyword=教育部公布24种新增本科专业)
 1. [赵丽颖新剧首播口碑](https://so.toutiao.com/search?keyword=赵丽颖新剧首播口碑)
 1. [雷军官宣4月份开始交付小米SU7](https://so.toutiao.com/search?keyword=雷军官宣4月份开始交付小米SU7)
-1. [淀粉肠还有救吗](https://so.toutiao.com/search?keyword=淀粉肠还有救吗)
 1. [官方通报教学楼栏杆断裂学生跌落](https://so.toutiao.com/search?keyword=官方通报教学楼栏杆断裂学生跌落)
 1. [网友洛杉矶偶遇贾玲](https://so.toutiao.com/search?keyword=网友洛杉矶偶遇贾玲)
 1. [旅游博主去南极看冰崩获近千万点赞](https://so.toutiao.com/search?keyword=旅游博主去南极看冰崩获近千万点赞)
